# spoot

./: .rustfmt.toml  Cargo.toml  README.md
src/: app.rs  conf.rs  icons.rs  main.rs  result.rs  search.rs
src/search/: crates.rs  math.rs  web.rs
