[package]
name = "spoot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
crates-io = "0.37.0"
curl = "0.4.44"
directories = "5.0.1"
eframe = { version = "0.22.0", features = ["serde"] }
egui = { version = "0.22.0", features = ["bytemuck", "log", "serde"] }
evalexpr = "11.0.0"
once_cell = "1.18.0"
open = "5.0.0"
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.7.6"

[build-dependencies]
rosetta-build = "0.1.3"
